--- a/index.css
+++ b/index.css
@@ -1,3 +1,17 @@
+h1, h2, h3 {
+	font-family: Blinker, serif;
+	font-weight: 700;
+}
+
+p, li {
+	font-family: Blinker, serif;
+	font-weight: 200;
+}
+
+/***
+Navbar
+***/
+
 .nav {
 	display: inline-block;
 }
@@ -15,6 +29,21 @@
 	height: 20px;
 }
 
-.main-shoe {
-	background-color: red;
+/***
+Product Banner
+***/
+/* color-1: #E32525 */
+/* color-2: #E32567 */
+
+#product-banner {
+	background: linear-gradient(to left, #E32525, #E32590);
+}
+
+/***
+Page body
+***/
+
+main {
+	margin-left: 10%;
+	margin-right: 10%;
 }
